samples/_failures_safe/1761045322_9527c1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e22398f0.c: In function ‘main’:
./samples/SAFE/__tmp_e22398f0.c:168:18: error: expected ‘]’ at end of input
  168 |         input[len
      |                  ^
      |                  ]
./samples/SAFE/__tmp_e22398f0.c:168:9: error: expected declaration or statement at end of input
  168 |         input[len
      |         ^~~~~
./samples/SAFE/__tmp_e22398f0.c:168:9: error: expected declaration or statement at end of input
